# VKR

./: .env  Dockerfile  config.py  db.py  log.txt  main.py  pyproject.toml  requirements.txt
models/: shemes.py  tables.py
public/: level_routers.py  routers.py
